--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <!-- 引入 echarts.js -->
     <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
 </head>
-
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+</style>
 <body>
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
     <div id="main" style="width: 100%;height:90vh;"></div>
