--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         padding: 0;
     }
 </style>
+
 <body>
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
     <div id="main" style="width: 100%;height:90vh;"></div>
@@ -30,7 +31,7 @@
                     trigger: 'axis'
                 },
                 legend: {
-                    data: ['公校', '课前测', '阶段测'],
+                    data: ['公校','课前测', '阶段测'],
                     x: 'center',      //可设定图例在左、右、居中
                     y: 'bottom',     //可设定图例在上、下、居中
                     padding: [20, 0, 0, 0]
@@ -76,88 +77,9 @@
             },
             media: [
                 {
-                    option: {
-                        legend: {
-                            right: 'center',
-                            bottom: 0,
-                            orient: 'horizontal'
-                        },
-                        series: [
-                            {
-                                radius: [20, '50%'],
-                                center: ['25%', '50%']
-                            },
-                            {
-                                radius: [30, '50%'],
-                                center: ['75%', '50%']
-                            }
-                        ]
-                    }
-                },
-                {
                     query: {
-                        minAspectRatio: 1
-                    },
-                    option: {
-                        legend: {
-                            right: 'center',
-                            bottom: 0,
-                            orient: 'horizontal'
-                        },
-                        series: [
-                            {
-                                radius: [20, '50%'],
-                                center: ['25%', '50%']
-                            },
-                            {
-                                radius: [30, '50%'],
-                                center: ['75%', '50%']
-                            }
-                        ]
-                    }
-                },
-                {
-                    query: {
-                        maxAspectRatio: 1
-                    },
-                    option: {
-                        legend: {
-                            right: 'center',
-                            bottom: 0,
-                            orient: 'horizontal'
-                        },
-                        series: [
-                            {
-                                radius: [20, '50%'],
-                                center: ['50%', '30%']
-                            },
-                            {
-                                radius: [30, '50%'],
-                                center: ['50%', '70%']
-                            }
-                        ]
-                    }
-                },
-                {
-                    query: {
-                        maxWidth: 500
-                    },
-                    option: {
-                        legend: {
-                            right: 10,
-                            top: '15%',
-                            orient: 'vertical'
-                        },
-                        series: [
-                            {
-                                radius: [20, '50%'],
-                                center: ['50%', '30%']
-                            },
-                            {
-                                radius: [30, '50%'],
-                                center: ['50%', '75%']
-                            }
-                        ]
+                        minWidth: 200,
+                        maxHeight: 300,
                     }
                 }
             ]
