--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 },
                 legend: {
                     data: ['公校','课前测', '阶段测'],
-                    x: 'center',      //可设定图例在左、右、居中
-                    y: 'bottom',     //可设定图例在上、下、居中
-                    padding: [20, 0, 0, 0]
+//                     x: 'center',      //可设定图例在左、右、居中
+//                     y: 'bottom',     //可设定图例在上、下、居中
+//                     padding: [20, 0, 0, 0]
                 },
 
                 grid: {
